--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,3 +32,14 @@ jobs:
     - name: run build...
       run: npm run build
 
+    - name: Deploy
+          run: |
+            git config --global user.name tungnguyen741
+            git config --global user.email tung.nguyen21098@gmail.com
+            git remote set-url origin https://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@github.com/3D
+            npm run deploy
+          env:
+            user_name: 'github-actions[bot]'
+            user_email: 'github-actions[bot]@users.noreply.github.com'
+            github_token: ${{ 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 }}
+            repository: ${{ github.repository }}
