--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,13 +5,12 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ dev ]
+    branches: [dev]
   pull_request:
-    branches: [ dev ]
+    branches: [dev]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,26 +19,25 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - name: install package...    
-      run: yarn install
-      
-    - name: run build...
-      run: npm run build
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+      - name: install package...
+        run: yarn install
 
-    - name: Deploy
-          run: 
-            git config --global user.name tungnguyen741
-            git config --global user.email tung.nguyen21098@gmail.com
-            git remote set-url origin https://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@github.com/3D
-            npm run deploy
-          env:
-            user_name: 'github-actions[bot]'
-            user_email: 'github-actions[bot]@users.noreply.github.com'
-            github_token: ${{ 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 }}
-            repository: ${{ github.repository }}
+      - name: run build...
+        run: npm run build
+
+      - name: Deploy
+        run: git config --global user.name tungnguyen741
+          git config --global user.email tung.nguyen21098@gmail.com
+          git remote set-url origin https://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@github.com/3D
+          npm run deploy
+        env:
+          user_name: "github-actions[bot]"
+          user_email: "github-actions[bot]@users.noreply.github.com"
+          github_token: ${{ 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 }}
+          repository: ${{ github.repository }}
