test build ci/cd

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,7 +35,7 @@ jobs:
         run: |
           git config --global user.name tungnguyen741
           git config --global user.email tung.nguyen21098@gmail.com
-          git remote set-url origin https://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@github.com/3D
+          git remote set-url origin https://${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}@github.com/3D
           npm run deploy
         env:
           user_name: "github-actions[bot]"
