--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,12 +33,12 @@ jobs:
 
       - name: Deploy
         run: |
-          git config --global user.name tungnguyen741
-          git config --global user.email tung.nguyen21098@gmail.com
-          git remote set-url origin https://${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}@github.com/3D
+          git config --global user.name $user_name
+          git config --global user.email $user_email
+          git remote set-url origin https://${github_token}@github.com/${repository}
           npm run deploy
         env:
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
-          github_token: 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
-          repository: 3D
+          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          repository: ${{ github.repository }}
