--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -41,4 +41,4 @@ jobs:
           user_name: "github-actions[bot]"
           user_email: "github-actions[bot]@users.noreply.github.com"
           github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-          repository: ${{ github.repository }}
+          repository: 3D
