--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -38,7 +38,7 @@ jobs:
           git remote set-url origin https://${github_token}@github.com/${repository}
           npm run deploy
         env:
-          user_name: "github-actions[bot]"
-          user_email: "github-actions[bot]@users.noreply.github.com"
-          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-          repository: 3D
+          user_name: "tungnguyen741"
+          user_email: "tung.nguyen21098@gmail.com"
+          github_token: ${{ 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 }}
+          repository: ${{ 3D }}
