--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "gh-pages": "^3.2.3",
+    "heroku": "^7.60.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
