--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "jsx": "react-jsx",
     "rootDir": ".",
     "baseUrl": ".",
+    "paths":{
+      "@/*": ["src/*"]
+    }
   }, 
   "includes":["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "**/*.spec.ts"]
